--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.2",
+    "axios": "^1.4.0",
     "firebase": "^10.1.0",
     "formik": "^2.4.3",
     "jquery": "^3.7.0",
@@ -20,6 +21,8 @@
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "sweetalert2": "^11.7.22",
+    "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
