--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
     "@testing-library/user-event": "^13.5.0",
     "antd": "^5.8.2",
     "axios": "^1.4.0",
+    "crypto-browserify": "^3.12.0",
     "firebase": "^10.1.0",
     "formik": "^2.4.3",
     "jquery": "^3.7.0",
+    "jsonwebtoken": "^9.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
