--- a/package.json
+++ b/package.json
@@ -13,16 +13,16 @@
     "antd": "^5.8.2",
     "axios": "^1.4.0",
     "crypto-browserify": "^3.12.0",
-    "firebase": "^10.1.0",
+    "firebase": "^9.22.0",
     "formik": "^2.4.3",
     "jquery": "^3.7.0",
-    "jsonwebtoken": "^9.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-owl-carousel": "^2.3.3",
     "react-router-dom": "^6.14.2",
     "react-scripts": "^5.0.1",
+    "react-with-firebase-auth": "^1.4.1",
     "sweetalert2": "^11.7.22",
     "sweetalert2-react-content": "^5.0.7",
     "web-vitals": "^2.1.4"
